labs02/typeerror
[ Error  ] labs02/exercise22.scala:14:5: error: overloaded method value decreases with alternatives:
[ Error  ]   (rank: (Int, Int, Int, Int, Int))Unit <and>
[ Error  ]   (rank: (Int, Int, Int, Int))Unit <and>
[ Error  ]   (rank: (Int, Int, Int))Unit <and>
[ Error  ]   (rank: (Int, Int))Unit <and>
[ Error  ]   (rank: Int)Unit <and>
[ Error  ]   (rank: (BigInt, BigInt, BigInt, BigInt, BigInt))Unit <and>
[ Error  ]   (rank: (BigInt, BigInt, BigInt, BigInt))Unit <and>
[ Error  ]   (rank: (BigInt, BigInt, BigInt))Unit <and>
[ Error  ]   (rank: (BigInt, BigInt))Unit <and>
[ Error  ]   (rank: BigInt)Unit
[ Error  ]  cannot be applied to ((BigInt, Int))
               decreases((list.size,0))
               ^
[  Info  ]   ┌─────────────────────┐
[  Info  ] ╔═╡ Termination Summary ╞════════════════════════════════════════════════════════════╗
[  Info  ] ║ └─────────────────────┘                                                            ║
[  Info  ] ╟┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄╢
[  Info  ] ║ Analysis time:   0,001                                                             ║
[  Info  ] ╚════════════════════════════════════════════════════════════════════════════════════╝
